@startuml resultQueries-resultObserver
skinparam packageStyle rectangle
skinparam shadowing false
skinparam backgroundColor #F9F9F9
skinparam packageBackgroundColor #DDDDDD
skinparam packageBorderColor #000000
skinparam arrowColor #000000
skinparam arrowThickness 2

abstract class ResultQueries {
    ResultObserver
    resolve_query()
}
abstract class ResultObserver {
    open_observer()
    close_observer()
    on_result_found()
}
class queriesCypher
class printer
class composable
class SVC

ResultQueries <|-- queriesCypher   

ResultObserver <|-- printer
ResultObserver <|-- composable
ResultObserver <|-- SVC

ResultQueries -> ResultObserver : (coupling)
@enduml